# logicline

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: exporter.rs  fan_control.rs
ll-default-view/: index.html  package-lock.json  package.json
ll-default-view/src/: data.tsx  index.css  main.tsx
ll-default-view/src/assets/icons/: index.tsx
ll-default-view/src/modal/: ModalBox.css  ModalBox.tsx
logicline-view/: README.md  bun.lockb  package-lock.json  package.json  vite.config.ts
logicline-view/src/: global.css  lib.mts  types.tsx
logicline-view/src/components/: index.tsx
logicline-view/src/components/Block/: Block.css  Block.tsx
logicline-view/src/components/Rack/: RackView.css  RackView.tsx
src/: lib.rs  recording.rs
