[package]
name = "logicline"
version = "0.1.8"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/roboplc/logicline"
description = "Logic processing engine"
keywords = ["logic", "visualization", "monad", "graph"]
readme = "README.md"
autoexamples = false

[package.metadata.docs.rs]
features = []

[package.metadata.playground]
features = []

[dependencies]
erased-serde = { version = "0.4", optional = true }
once_cell = "1.21"
rouille = { version = "3.6", optional = true }
rtsc = "0.3"
parking_lot = { version = "0.12.3", optional = true }
parking_lot_rt = { version = "0.12.1", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
exporter = ["dep:rouille", "dep:serde", "dep:serde_json"]
exporter-ui = ["exporter"]
recording = ["dep:serde", "dep:serde_json", "dep:erased-serde"]
default = ["recording", "exporter", "locking-rt"]

locking-default = ["dep:parking_lot", "rtsc/parking_lot"]
locking-rt = ["dep:parking_lot_rt"]
locking-rt-safe = []

[[example]]
name = "fan_control"
path = "examples/fan_control.rs"
required-features = ["recording"]

